--- a/parameter_estimate/readme
+++ b/parameter_estimate/readme
@@ -1,2 +1,3 @@
 This folder contains the file needed to get the best fit parameters. It requires QSOGEN by Temple+21 (not qsogen_4_catalog) 
-and a __init__.py should be added to qsogen folde
+and a __init__.py should be added to qsogen folder.
+It also requires my_functions repo.
